Replace WebViewBrowserTest::ScrollWaiter

WebViewBrowserTest::ScrollWaiter does not work in Viz. This change replaces it
with RenderFrameSubmissionObserver which provides the same functionality for
both normal and viz display compositors.

Also swaps all GetLastScrollOffset calls over to RenderFrameSubmissionObserver.
As they also don't work in Viz.

TEST=WebViewBrowserTest*

Bug: 796336
Change-Id: I7cebf3d3ac2d4ecc0c6f3cf208e5ba691eadad6e
Reviewed-on: https://chromium-review.googlesource.com/947036
Commit-Queue: Jonathan Ross <jonross@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545430}
Former-commit-id: 082707af4c53d7a511c63e0563ea304f080222f9