content/renderer/render_frame_metadata_observer_impl.h
@@ -47,10 +47,11 @@ class RenderFrameMetadataObserverImpl
   // frame submissions.
   bool report_all_frame_submissions_for_testing_enabled_ = false;
 
+  uint32_t last_frame_token_ = 0;
   cc::RenderFrameMetadata last_render_frame_metadata_;
 
   // Not owned.
-  cc::FrameTokenAllocator* frame_token_allocator_;
+  cc::FrameTokenAllocator* frame_token_allocator_ = nullptr;
 
   // These are destroyed when BindToCurrentThread() is called.
   mojom::RenderFrameMetadataObserverRequest request_;
