content/public/test/browser_test_utils.cc
@@ -1879,6 +1879,14 @@ void RenderFrameSubmissionObserver::WaitForMetadataChange() {
   Wait();
 }
 
+void RenderFrameSubmissionObserver::WaitForScrollOffset(
+    const gfx::Vector2dF& expected_offset) {
+  while (render_frame_metadata_provider_->LastRenderFrameMetadata()
+             .root_scroll_offset != expected_offset) {
+    WaitForMetadataChange();
+  }
+}
+
 const cc::RenderFrameMetadata&
 RenderFrameSubmissionObserver::LastRenderFrameMetadata() const {
   return render_frame_metadata_provider_->LastRenderFrameMetadata();
